add dymanic api key
